fixing the horizontal scroll + some modification in the nav bar and in the buttons

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
         );
         background-position: center top;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -32,23 +32,27 @@
     flex-grow: 1;   
 }
 
+ a {
+    
+    cursor: pointer;
+}
 .navbar-logo{
   flex-grow: 8  ;
   padding-left: 30px;
 }
 
-.header-button{
-
-background-color: #EC4C66; /* Green */
+#header-button{
+   background-color: #EC4C66; /* Green */
   border: 2px solid;
   border-radius: 5px;
  border-style: none;
   color: rgb(255, 255, 255);
-  padding: 10px 10px;
+  padding: 10px 20px 10px 20px; 
   margin: 20px;
   text-align: center;
   text-decoration: none;    
-  font-size: 16px;
+  font-size: 14px;
+  cursor: pointer;
 }
 
 
@@ -56,24 +60,24 @@ background-color: #EC4C66; /* Green */
 background-color: #EC4C66; /* Green */
 border-radius: 5px;
 border-color: rgba(255, 255, 255, 0); 
-color: rgb(0, 0, 0);
+color: rgb(255, 255, 255);
 padding: 7px;
 cursor: pointer;
-
 }
 
 #bmi-button{
-    background-color: #EC4C66; 
+background-color: #EC4C66; 
 border-radius: 5px;
 border-color: rgba(255, 255, 255, 0); 
-color: rgb(0, 0, 0);
+color: rgb(255, 255, 255);
 padding: 7px;
 cursor: pointer;
 }
 
-#bmi-button:hover{
-    background-color: #ec4c67a1;
-
+#bmi-button:hover,
+#subscribe-button:hover,
+#header-button:hover{
+    background-color: #792634;
 }
 
 .bgr-descr-title {
@@ -118,9 +122,6 @@ margin: 10px;
     margin-bottom: 30px;
     
 }
-
-
-
 
 .about-services-card-container{
     display: flex ;
@@ -182,21 +183,12 @@ background-color: rgb(207, 190, 190);
     color: white;
     padding-bottom:15px; height: 130px;
   background-image: url(
-    
-  
-  
-
    https://images.unsplash.com/photo-1623874400767-0fcdeedd0f5d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
-  
-  
   );
   background-repeat: no-repeat;
   background-size: cover;
   background-position:top;
-
-
-
-
+    width: 100%;
 
 }
 #email-input{
@@ -260,16 +252,12 @@ background-color: rgb(207, 190, 190);
     margin-top: 30px;
     padding: 30px;
     height: fit-content;
-    width: 100%;
+    
     background-image: url(
         
     https://images.unsplash.com/photo-1517838277536-f5f99be501cd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
     
-    
-    
-    
-    
-    
+
     
     );
     background-position:center ;
